--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.barry</groupId>
     <artifactId>openlab-magasin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>openlab-magasin</name>
     <description>openlab-magasin</description>
     <properties>
